Presets fix: search bar z-index should keep it above the presets panels

--- a/src/tabs/presets/presets.less
+++ b/src/tabs/presets/presets.less
@@ -185,6 +185,7 @@
 	position: sticky;
 	top: 0px;
 	background-color: var(--boxBackground);
+	z-index: 10;
 }
 .ms-drop {
 	background-color: var(--boxBackground) !important;
